--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.7.1",
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "front-end": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
